--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ jsonschema-specifications==2025.9.1
 MarkupSafe==3.0.3
 narwhals==2.8.0
 numpy==2.3.4
+numpy-financial==1.0.0
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
